exemi-frontend/src/index.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-size: 14px;
}

@media only screen and (min-width: 600px){
  html, body {
    font-size: 16px;
  }
}

@media only screen and (min-width: 900px){
  html, body {
    font-size: 18px;
  }
}

* {
  box-sizing: border-box;
  font-family: system-ui, -apple-system, BlinkMacSystemFont,
               "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  transition: 0.1s ease-in-out;
}

a {
  font-weight: 700;
}

div {
  border-radius: 8px;
}

div.error{
  width:100%;
  background-color: #ffbbbb;
  text-align: center;
}

/* div.background{
  background-color: #f5f5f5;
  margin: 0;
  min-height: 100dvh;
} */

div.form {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height:90dvh;
  width: 80%;
  margin-left:10%;
  gap:1em;
}

div.slideshow{
  display:flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width:100%;
  height:100dvh;
  text-align: center;
}

div.slideshow-header{
  width:100%;
}

div.slideshow-content{
  flex:1;
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 80%;
  overflow: hidden;
}

div.slideshow img{
  max-width: 100%;
  max-height:80%;
  height:auto;
  display:block;
  border-radius: 5px;
  border:4px solid #ccc;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.08);
}

div.slide-progress{
  width:80%;
  margin:auto;
  height:20px;
  border-radius: 8px;
  background-color: #ddd;
  margin-bottom:20px;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.08);
}

div.slide-progress-fill{
  background-color: #4f46e5;
  height:20px;
  transition: width 0.5s ease;
}

div.chat{
  display:flex;
  height:100dvh;
  width:100%;
  flex-direction: row;
}

button.sidebar-button{
  position: fixed;
  top: 0px;
  left: calc(min(50dvw, 400px));
  margin: 10px;
  height: 4em;
  width: 4em;
  text-align: center;
  transition: 0.1s ease-in-out;
}

button.sidebar-button.hidden{
  left:0px;
}

div.chat-sidebar{
  width:calc(min(50dvw, 400px));
  flex-shrink: 0;
  display:flex;
  margin-left:0px;
  flex-direction: column;
  height:100%;
  background-color: #eee;
  gap:10px;
  color:#222;
  border-radius: 0px;
  padding: 0px 10px;
  transition: 0.1s ease-in-out;
  overflow-x:hidden;
}

div.chat-sidebar.hidden{
  width:0px;
  padding:0px 0px;
}

div.chat-sidebar-header{
  display:flex;
  flex-direction: row;
  align-items:center;
  width:100%;
  max-height:50px;
  /* background-color: aqua; */
}

.logo {
  font-size: 32px;
  font-weight: 800;
}

div.chat-sidebar-footer{
  display:flex;
  flex-direction: column;
  align-items:baseline;
  width:100%;
  padding:32px 0px;
  margin:auto;
  /* background-color: aqua; */
  border-radius: 0;
}

div.chat-sidebar-footer button{
  height:4em;
  display: flex;
  align-items: center;
  justify-content: center;
}

div.conversation-container{
  display:flex;
  flex-direction: column;
  flex: 1;
  overflow: hidden;
  overflow-y: scroll;
  border: 2px solid #aaa;
  border-radius: 8px;
  padding: 0.5em;
}

button.conversation{
  width:100%;
  font-size: 0.9em;
  background-color: #eee;
  color:#222;
  font-weight: normal;
  border-radius: 8px;
  padding: 0.5em 0.3em;
}

button.conversation-selected:disabled{
  width:100%;
  font-size: 0.9em;
  background-color: #aaa;
  color:#222;
  font-weight: normal;
  border-radius: 8px;
  padding: 0.5em 0.3em;
  cursor:auto;
}

button.conversation:hover{
  background-color: #ccc;
  transform: scale(1);
  box-shadow: none;
}

button.conversation:active{
  background-color: #aaa;
}

button.conversation:disabled{
  cursor:auto;
  background-color: #eee;
}

div.chat-messages{
  display:flex;
  height:100dvh;
  width:100%;
  flex-direction: column;
}

div.message-container{
  flex:1;
  display:flex;
  overflow: hidden;
  overflow-y: scroll;
  /* background:lightblue; */
  padding:2em;
  flex-direction: column;
  /* min-width: 300px; */
  max-width: 42em;
  width:100%;
  margin:auto;
  gap:1em;
}

div.message{
  /* background-color: #eee; */
  width:100%;
  display: block;
  padding:0 1em;
  text-align: left;
  /* border: 2px solid #ccc; */
  /* box-shadow: 0 3px 3px rgba(0, 0, 0, 0.08); */
}

div.user-message{
  background-color: #d8deff;
  max-width:75%;
  display: block;
  padding:0 1em;
  text-align: left;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.08);
  margin-left:auto;
}

form.login{
  width: 100%;
  max-width: 400px;
  padding: 2em;
  display: flex;
  flex-direction: column;
  gap: 1em;
  /* background: #ffffff; */
  /* border-radius: 8px; */
  /* box-shadow: 0 3px 3px rgba(0, 0, 0, 0.08); */
  text-align: center;
}

form.login *, form.magic *{
  text-align: center;
}

form.magic{
  max-width:none;
  width:80%;
  gap:1em;
  display: flex;
  flex-direction: column;
}

.chatbox{
  display:flex;
  flex-direction: row;
  align-items:stretch;
  width:100%;
  padding:32px;
  max-width: 42em;
  margin:auto;
  /* background-color: aqua; */
}

form.chatbox *{
  height: 4em;
}

form.chatbox textarea{
  display: flex;
  margin:0;
  padding: 1.25em 0.5em;
  min-height: 4em;
  max-height: 50dvh;
  resize: none;
}

form.chatbox button{
  max-width: fit-content;
  padding: 0.5em 1em;
  height:auto;
}

input, button, textarea {
  width: 100%;
  font-size: 1em;
  border-radius: 4px;
}

input, textarea {
  padding:0.4em 0.5em;
  transition:box-shadow 0.1s ease, border-color 0.1s ease;
}

button {
  padding: 1em 1em;
  transition: transform 0.15s ease, box-shadow 0.1s ease, background-color 0.1s ease;
}

input, textarea {
  margin-top: 0.5em;
  border: 2px solid #aaa;
  box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
}

input:focus, textarea:focus {
  outline: none;
  border-color: #4f46e5;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

button {
  border: none;
  cursor: pointer;
  background-color: #4f46e5;
  color: #ffffff;
  font-weight: 600;
  box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
}

button:hover {
  background-color: #4338ca;
  transform: scale(1.03);
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

button:active{
  background-color: #2a218f;
  transform: scale(0.98);
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
}

button:disabled{
  background-color:#bcb8e0;
  cursor:not-allowed;
  transform:none;
  box-shadow: none;
}

button.back{
  width:6em;
  text-align: center;
  position:fixed;
  bottom:20px;
  left:20px;
}

button.next{
  width:6em;
  text-align: center;
  position:fixed;
  bottom:20px;
  right:20px;
}

